--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="music-container">
-        <h4 id="playlist-title">Playlist - Rodrigo</h4>
+        <h4 id="playlist-title">Playlist Hashtag</h4>
         <img id='cover' alt="Disc Cover."></img>
         <audio id='audio'></audio>
         <div id="below-cover">
@@ -23,6 +23,10 @@
         <div id="progress-container">
             <div id="progress-bar">
                 <div id="current-progress"></div>
+            </div>
+            <div id="time-box">
+                <div id="song-time">00:00:00</div>
+                <div id="total-time">00:00:00</div>
             </div>
         </div>
         <div id="button-container">
