--- a/index.html
+++ b/index.html
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Music Player</title>
+
+  <!-- Bootstrap Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+  />
+
+  <!-- Custom CSS (agora dentro da pasta css) -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <div class="music-container">
-        <h4 id="playlist-title">Playlist Hashtag</h4>
-        <img id='cover' alt="Disc Cover."></img>
-        <audio id='audio'></audio>
-        <div id="below-cover">
-            <div id="song-info">
-                <div id="song-name">Nome da música</div>
-                <div id="band-name" class="light-color">Nome da banda</div>
-            </div>    
-            <button id='like' class="button light-color"><i class="bi bi-heart"></i></button>
-        </div>
-        <div id="progress-container">
-            <div id="progress-bar">
-                <div id="current-progress"></div>
-            </div>
-            <div id="time-box">
-                <div id="song-time">00:00:00</div>
-                <div id="total-time">00:00:00</div>
-            </div>
-        </div>
-        <div id="button-container">
-            <button id="shuffle" class="button"><i class="bi bi-shuffle"></i></button>
-            <button id="previous" class="button button-navigate"><i class="bi bi-skip-start-fill"></i></button>
-            <button id="play" class="button button-biggest"><i class="bi bi-play-circle-fill"></i></button>
-            <button id="next" class="button button-navigate"><i class="bi bi-skip-end-fill"></i></button>
-            <button id="repeat" class="button"><i class="bi bi-repeat"></i></button>
-        </div>
+  <div class="music-container">
+    <h4 id="playlist-title">Minha Playlist</h4>
+    <img id="cover" alt="Disc Cover." />
+    <audio id="audio"></audio>
+
+    <div id="below-cover">
+      <div id="song-info">
+        <div id="song-name">Nome da música</div>
+        <div id="band-name" class="light-color">Nome da banda</div>
+      </div>
+      <button id="like" class="button light-color">
+        <i class="bi bi-heart"></i>
+      </button>
     </div>
-    <script src="/script.js"></script>
+
+    <div id="progress-container">
+      <div id="progress-bar">
+        <div id="current-progress"></div>
+      </div>
+      <div id="time-box">
+        <div id="song-time">00:00:00</div>
+        <div id="total-time">00:00:00</div>
+      </div>
+    </div>
+
+    <div id="button-container">
+      <button id="shuffle" class="button">
+        <i class="bi bi-shuffle"></i>
+      </button>
+      <button id="previous" class="button button-navigate">
+        <i class="bi bi-skip-start-fill"></i>
+      </button>
+      <button id="play" class="button button-biggest">
+        <i class="bi bi-play-circle-fill"></i>
+      </button>
+      <button id="next" class="button button-navigate">
+        <i class="bi bi-skip-end-fill"></i>
+      </button>
+      <button id="repeat" class="button">
+        <i class="bi bi-repeat"></i>
+      </button>
+    </div>
+  </div>
+
+  <!-- Custom JS (agora dentro da pasta js) -->
+  <script src="js/script.js"></script>
 </body>
 </html>
